--- a/public/css/app.css
+++ b/public/css/app.css
@@ -31175,6 +31175,10 @@ video {
           animation: bounce 1s infinite;
 }
 
+body{
+  background: white;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
